# gutenberg-hf-dataset

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update.yml
scripts/: full_build.sh
src/: __main__.py  build.py  dedup.py  download.py  upload.py
tests/: test_build.py  test_dedup.py  test_integration.py
