[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gutenberg-hf-dataset"
version = "0.1.0"
description = "Pipeline to build and maintain a HuggingFace dataset from Project Gutenberg"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "gutenbergpy>=0.3.5",
    "lxml>=6.1.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "datasets>=2.18",
    "huggingface-hub>=0.21",
    "requests>=2.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["data", ".git", ".venv", "__pycache__"]
markers = [
    "integration: tests that require network access",
]
